[package]
name = "exsepro"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[profile.release]
lto = "thin"

[dependencies]
bevy = {version = "0.10.0", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.18.1"
