[package]
name = "exsepro-bevy"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[profile.release]
lto = "thin"

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking", "serialize"] }
bevy-inspector-egui = "0.18.1"
ron = "0.8.0"
serde = { version = "1.0.159", features = ["derive"]}
tracing = "0.1.37"
