[package]
name = "exsepro-bevy"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[profile.release]
lto = "thin"

[dependencies] 
# Important to have dynamic_linking DISABLED when packaging --release for external execution
bevy = { version = "0.10.1", features = ["serialize"] }
# Important to have dynamic_linking ENABLED for faster recompilations
# bevy = { version = "0.10.0", features = ["dynamic_linking", "serialize"] }
bevy-inspector-egui = "0.18.3"
ron = "0.8.0"
serde = { version = "1.0.163", features = ["derive"]}
tracing = "0.1.37"
